--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-hi<br>
-koo
+<!doctype html>
+<html>
+<head lang="zh-TW">
+<meta charset="utf-8">
+<title>中原大富翁  預告官網</title>
+<link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="main.css">
+</head>
+<body> 
+<h1>遊戲仍在製作中---預計完成日期: 2020/12/31</h1>
+</body>
+</html>
