--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-222
+<!doctype html>
+<html>
+<head lang="zh-TW">
+<meta charset="utf-8">
+<title>忍者龜</title>
+<link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="main.css">
+</head>
+<body>
+<div class="container">
+<section class="title">
+<img src="film_title.png">
+<h2 class="time">8月8日 3D震撼登場</h2>
+</section>
+<section class="vedio">
+<h3 class="section-title">最新預告</h3>
+<iframe width="640" height="360" src="//www.youtube.com/embed/96gGWkkUhEo?list=PLPCb6qD6nQhAZmq8QQTP_z_o7JbmHwECq" frameborder="0" allowfullscreen></iframe>
+</section>
+<section class="story">
+<h3 class="section-title">故事介紹</h3>
+<p>大反派許瑞德（威廉費奇納 飾）和他率領的異族使用鐵腕壓制一切，從警察到政客都被其所控制。當黑暗降臨到紐約，城市需要的是英雄們來拯救。四位忍者龜兄弟從下水道崛起，他們從自己身上發現到「忍者龜」的使命。忍者龜們和無所畏懼的女記者艾波歐尼爾（梅根福克斯 飾）以及聰明的攝影師凡諾芬維克（威爾阿奈特 飾）通力合作，摧毀許瑞德的恐怖計劃，讓這座城市重新恢復寧靜。</p>
+</section>
+<footer>
+<ul>
+<li><a href="#0">網站聲明</a></li>
+<li><a href="#0">使用條款</a></li>
+<li><a href="#0">隱私權政策</a></li>
+</ul>
+</footer>
+</div>
+</body>
+</html>
