--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="zh-TW">
 <meta charset="utf-8">
-<title>忍者龜</title>
+<title>--環太平洋--</title>
 <link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="main.css">
 </head>
