--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
 
-<img alt="rim.jpg" src="rim.jpg" width="250" height="60" style="-moz-opacity:0.5; filter:alpha(opacity=50);cursor:hand;" onmouseover="this.style.MozOpacity=1;
+<img alt="rim.jpg" src="rim.jpg"  style="-moz-opacity:0.5; filter:alpha(opacity=50);cursor:hand;" onmouseover="this.style.MozOpacity=1;
 this.filters.alpha.opacity=100" onmouseout="this.style.MozOpacity=0.5;
 this.filters.alpha.opacity=50">
 <h2 class="time">8月8日 3D震撼登場</h2>
