--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
 <div class="container">
-
-<img alt="rim.jpg" src="rim.jpg"  style="-moz-opacity:0.5; filter:alpha(opacity=50);cursor:hand;" onmouseover="this.style.MozOpacity=1;
-this.filters.alpha.opacity=100" onmouseout="this.style.MozOpacity=0.5;
-this.filters.alpha.opacity=50">
+<div class="picture">
+<img src="rim.jpg">
+</div>
 <h2 class="time">8月8日 3D震撼登場</h2>
-
+</div>
 <footer>
 <ul>
 <li><a href="#0">網站聲明</a></li>
