--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
 <title>--環太平洋--</title>
 <link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="main.css">
+
+$(function () {
+  $('#p1').mouseenter(function(){
+    $('.picture').toggleClass('picture-change');
+  });
+});
 </head>
 <body>
 <div class="container">
-<div class="picture">
+<div id="p1" class="picture">
 <img src="rim.jpg">
 </div>
 <h2 class="time">8月8日 3D震撼登場</h2>
