--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 <title>--環太平洋--</title>
 <link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="main.css">
-
+<script>
 $(function () {
   $('#p1').mouseenter(function(){
     $('.picture').toggleClass('picture-change');
   });
 });
+</script>
 </head>
 <body>
 <div class="container">
