--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="main.css">
 <script>
+$(founction(){
 $('#p1').mouseenter(function(){
   $('.picture').toggleClass('picture-change');
+});
 });
 </script>
 </head>
