--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="main.css">
 <script>
-$(founction(){
+$(function(){
 $('#p1').mouseenter(function(){
   $('.picture').toggleClass('picture-change');
 });
