--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="main.css">
 <script>
 $(function(){
-$('#p1').mouseenter(function(){
-  $('.picture').toggleClass('picture-change');
+$("#p1").mouseenter(function(){
+  $(".picture").toggleClass('picture-change');
 });
 });
 </script>
