--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head lang="zh-TW">
 <meta charset="utf-8">
 <title>--環太平洋--</title>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
 <link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="main.css">
 <script>
