--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ $("#p1").mouseenter(function(){
   $(".picture").toggleClass("picture-change");
 });
 $("#p1").mouseleave(function(){
-$(".picture-change").toggleClass(".picture");
+$(".picture-change").toggleClass("picture");
 });
 });
 </script>
