--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 </head>
 <body>
 <div class="container">
+<a href="rim.jpg">
 <div id="p1" class="picture">
 <img src="rim.jpg">
 </div>
+</a>
 <h2 class="time">8月8日 3D震撼登場</h2>
 </div>
 <footer>
