--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <img src="rim.jpg">
 </div>
 </a>
-<a href="music.html"></a>
+<a href="music.html">
+  <td>音樂欣賞</td>
+</a>
 <h2 class="time">8月8日 3D震撼登場</h2>
 </div>
 <footer>
