--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+<!DOCTYPE HTML>
 <html>
 <head lang="zh-TW">
 <meta charset="utf-8">
@@ -8,22 +9,43 @@
 <script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
 <link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="main.css">
-<script>
 
-</script>
 </head>
+
 <body>
 <div class="container">
-<a href="rim.jpg">
+<a target="_blank" href="http://zh.wikipedia.org/wiki/%E7%8E%AF%E5%A4%AA%E5%B9%B3%E6%B4%8B_%28%E7%94%B5%E5%BD%B1%29">
 <div id="p1" class="picture">
-<img src="rim.jpg">
+<img src="rim.jpg" title="Pacific Rim  環太平洋  wiki">
 </div>
 </a>
-<a href="music.html">
-  <td>音樂欣賞</td>
-</a>
-<h2 class="time">8月8日 3D震撼登場</h2>
+
+
+<h2 class="time" align="center">環太平洋 於 2013/07/11 在台上映<br>**環太平洋2 預定於 2017/04/07 上映**</h2>
+<!--
+<div id="movie_show">
+<h2 class="time">電影大綱</h2>
+名為「怪獸」的可怕怪物大軍突然冒出海面，向人類居住的城市進軍，一場歷時數年，奪走數以百萬計人類生命及財產的長期戰爭於焉展開。為了對抗這些巨大怪獸，人類啟動代號「賊鷗」(Jaeger)的作戰計劃，也就是巨大機械人防衛作戰計劃。這是由兩名腦部神經網路互相串連的操縱者同步操作(又稱神經元合體)的戰鬥機械人，不過即使是人類最先進的巨大戰鬥機械人，在面對冷酷又殘暴的怪獸時，也被打得潰不成軍。在瀕臨挫敗之際，保衛人類的勢力只剩下最後兩名看似沒有勝算的人，一個是曾經灰心喪志的前機械人操縱者（查理漢納 飾），另一個是從未經歷過戰火試煉的菜鳥受訓員（菊地凜子 飾），他們聯手操縱早已過時的巨大機械人：吉普賽危機，一同挺身為人類抵抗世界末日的來臨。
 </div>
+-->
+<aside>
+<div class="link_movie">
+<span id="title">電影介紹</span>
+<a href="movie.html">  電影大綱  </a>
+|
+<a href="youtube.html">  預告片  </a>
+</div>
+
+<div class="link_about">
+<span id="title">燃料補充</span>
+<a href="music.html">  音樂欣賞  </a>
+|
+<a href="picture.html">  電影劇照  </a>
+</div>
+
+</aside>
+
+
 <footer>
 <ul>
 <li><a href="#0">網站聲明</a></li>
@@ -34,3 +56,4 @@
 </div>
 </body>
 </html>
+
