--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html>
 <head lang="zh-TW">
@@ -9,7 +8,8 @@
 <script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
 <link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="main.css">
-
+<script>
+</script>
 </head>
 
 <body>
@@ -45,15 +45,13 @@
 
 </aside>
 
-
 <footer>
 <ul>
-<li><a href="#0">網站聲明</a></li>
-<li><a href="#0">使用條款</a></li>
-<li><a href="#0">隱私權政策</a></li>
+<li><a href="https://www.google.com.tw/search?q=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E4%B8%BB%E8%A7%92&client=firefox-a&hs=ePC&rls=org.mozilla:zh-TW:official&channel=sb&source=lnms&sa=X&ei=Bx_2U-GAIpHc8AW6p4GACA&ved=0CAcQ_AUoAA&biw=1360&bih=657&dpr=1">環太平洋主角</a></li>
+<li><a href="https://www.google.com.tw/search?client=firefox-a&hs=POC&rls=org.mozilla%3Azh-TW%3Aofficial&channel=sb&biw=1360&bih=657&tbm=nws&q=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E9%9B%BB%E5%BD%B1&oq=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E9%9B%BB%E5%BD%B1&gs_l=serp.3...12772.12772.0.13628.1.1.0.0.0.0.105.105.0j1.1.0....0...1c..51.serp..1.0.0.uFmw1HHSU6U">更多相關新聞</a></li>
+<li><a href="https://www.google.com.tw/search?q=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E6%A9%9F%E5%99%A8%E4%BA%BA&client=firefox-a&hs=r0W&sa=X&rls=org.mozilla:zh-TW:official&channel=sb&tbm=isch&tbo=u&source=univ&ei=CR72U5G-Eonn8AXl8oCACw&ved=0CBwQsAQ&biw=1360&bih=657">更多機器人圖片</a></li>
 </ul>
 </footer>
 </div>
 </body>
 </html>
-
