--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </a>
 
 
-<h2 class="time" align="center">環太平洋 於 2013/07/11 在台上映<br>**環太平洋2 預定於 2017/04/07 上映**</h2>
+<h2 class="time" align="center">環太平洋 於 2013 / 07 / 11 在台上映<br>**環太平洋2 預定於 2017 / 04 / 07 上映**</h2>
 <!--
 <div id="movie_show">
 <h2 class="time">電影大綱</h2>
@@ -31,16 +31,16 @@
 <aside>
 <div class="link_movie">
 <span id="title">電影介紹</span>
-<a href="movie.html">  電影大綱  </a>
+<a href="movie.html" style="text-decoration:none;">  電影大綱  </a>
 |
-<a href="youtube.html">  預告片  </a>
+<a href="youtube.html" style="text-decoration:none;">  預告片  </a>
 </div>
 
 <div class="link_about">
 <span id="title">燃料補充</span>
-<a href="music.html">  音樂欣賞  </a>
+<a href="music.html" style="text-decoration:none;">  音樂欣賞  </a>
 |
-<a href="picture.html">  電影劇照  </a>
+<a href="picture.html" style="text-decoration:none;">  電影劇照  </a>
 </div>
 
 </aside>
