--- a/picture.html
+++ b/picture.html
@@ -15,6 +15,8 @@
 <img class="photo" src="http://p1-news.yamedia.tw/NjcxMTQ4bmV3cw==/f4350cadeb30ecf1.jpg">
 <img class="photo" src="http://2.bp.blogspot.com/-JZOuSX55KKs/UdQMYuZTV_I/AAAAAAABc_k/-CbIa4USt10/s1600/SS-KH-05237.jpg">
 <img class="photo" src="http://imgcache.chinayes.com/cnews/20130715/201307151905222516470.jpg">
+<br><br><br>
+<h2>想看大圖? 請點擊圖片,謝謝!</h2>
 <aside>
 <div class="link_movie">
 <span id="title">電影介紹</span>
