--- a/music.html
+++ b/music.html
@@ -12,10 +12,10 @@
 <script>
 $(function(){
   $("#more").button();
-  $("#vedio").hide();
+  $("#video").hide();
   
   $("#more").click(function(){
-    $("#vedio").show('animated fadeInDown');
+    $("#video").show('animated fadeInDown');
   });
   
 });
@@ -33,7 +33,7 @@ Pacific Rim Ramin Djawadi (Pacific Rim OST)
 <br><br>
 <button id="more">想聽更多?</button><br><br><br>
 
-<iframe id="vedio" width="640" height="360" src="//www.youtube.com/embed/vJFJ_uGlMVY?list=PLHuwLu52LzUd6Ezb9-xGFbgyRUFwVeM3d" frameborder="0" allowfullscreen></iframe>
+<iframe id="video" width="640" height="360" src="//www.youtube.com/embed/vJFJ_uGlMVY?list=PLHuwLu52LzUd6Ezb9-xGFbgyRUFwVeM3d" frameborder="0" allowfullscreen></iframe>
 
 </div>
 <aside>
