--- a/music.html
+++ b/music.html
@@ -16,6 +16,7 @@ $(function(){
   
   $("#more").click(function(){
     $("#video").show('animated fadeInDown');
+    $("#more").hide();
   });
   
 });
