--- a/index.html
+++ b/index.html
@@ -22,12 +22,7 @@
 
 
 <h2 class="time" align="center">環太平洋 於 2013 / 07 / 11 在台上映<br>**環太平洋2 預定於 2017 / 04 / 07 上映**</h2>
-<!--
-<div id="movie_show">
-<h2 class="time">電影大綱</h2>
-名為「怪獸」的可怕怪物大軍突然冒出海面，向人類居住的城市進軍，一場歷時數年，奪走數以百萬計人類生命及財產的長期戰爭於焉展開。為了對抗這些巨大怪獸，人類啟動代號「賊鷗」(Jaeger)的作戰計劃，也就是巨大機械人防衛作戰計劃。這是由兩名腦部神經網路互相串連的操縱者同步操作(又稱神經元合體)的戰鬥機械人，不過即使是人類最先進的巨大戰鬥機械人，在面對冷酷又殘暴的怪獸時，也被打得潰不成軍。在瀕臨挫敗之際，保衛人類的勢力只剩下最後兩名看似沒有勝算的人，一個是曾經灰心喪志的前機械人操縱者（查理漢納 飾），另一個是從未經歷過戰火試煉的菜鳥受訓員（菊地凜子 飾），他們聯手操縱早已過時的巨大機械人：吉普賽危機，一同挺身為人類抵抗世界末日的來臨。
-</div>
--->
+
 <aside>
 <div class="link_movie">
 <span id="title">電影介紹</span>
@@ -47,9 +42,9 @@
 
 <footer>
 <ul>
-<li><a href="https://www.google.com.tw/search?q=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E4%B8%BB%E8%A7%92&client=firefox-a&hs=ePC&rls=org.mozilla:zh-TW:official&channel=sb&source=lnms&sa=X&ei=Bx_2U-GAIpHc8AW6p4GACA&ved=0CAcQ_AUoAA&biw=1360&bih=657&dpr=1">環太平洋主角</a></li>
-<li><a href="https://www.google.com.tw/search?client=firefox-a&hs=POC&rls=org.mozilla%3Azh-TW%3Aofficial&channel=sb&biw=1360&bih=657&tbm=nws&q=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E9%9B%BB%E5%BD%B1&oq=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E9%9B%BB%E5%BD%B1&gs_l=serp.3...12772.12772.0.13628.1.1.0.0.0.0.105.105.0j1.1.0....0...1c..51.serp..1.0.0.uFmw1HHSU6U">更多相關新聞</a></li>
-<li><a href="https://www.google.com.tw/search?q=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E6%A9%9F%E5%99%A8%E4%BA%BA&client=firefox-a&hs=r0W&sa=X&rls=org.mozilla:zh-TW:official&channel=sb&tbm=isch&tbo=u&source=univ&ei=CR72U5G-Eonn8AXl8oCACw&ved=0CBwQsAQ&biw=1360&bih=657">更多機器人圖片</a></li>
+<li><a target="_blank" href="https://www.google.com.tw/search?q=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E4%B8%BB%E8%A7%92&client=firefox-a&hs=ePC&rls=org.mozilla:zh-TW:official&channel=sb&source=lnms&sa=X&ei=Bx_2U-GAIpHc8AW6p4GACA&ved=0CAcQ_AUoAA&biw=1360&bih=657&dpr=1">環太平洋主角</a></li>
+<li><a target="_blank" href="https://www.google.com.tw/search?client=firefox-a&hs=POC&rls=org.mozilla%3Azh-TW%3Aofficial&channel=sb&biw=1360&bih=657&tbm=nws&q=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E9%9B%BB%E5%BD%B1&oq=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E9%9B%BB%E5%BD%B1&gs_l=serp.3...12772.12772.0.13628.1.1.0.0.0.0.105.105.0j1.1.0....0...1c..51.serp..1.0.0.uFmw1HHSU6U">更多相關新聞</a></li>
+<li><a target="_blank" href="https://www.google.com.tw/search?q=%E7%92%B0%E5%A4%AA%E5%B9%B3%E6%B4%8B+%E6%A9%9F%E5%99%A8%E4%BA%BA&client=firefox-a&hs=r0W&sa=X&rls=org.mozilla:zh-TW:official&channel=sb&tbm=isch&tbo=u&source=univ&ei=CR72U5G-Eonn8AXl8oCACw&ved=0CBwQsAQ&biw=1360&bih=657">更多機器人圖片</a></li>
 </ul>
 </footer>
 </div>
